syntax = "proto3";

package user;

service UserService {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
}

message RegisterUserRequest {
  string name = 1;
  string email = 2;
}

message RegisterUserResponse {
  string user_id = 1;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  string name = 1;
  string email = 2;
}
